EXM-46940: implemented some sonar qube suggestions